force-app/main/default/objects/ssot__PartyPhilanthropicMilestone__dlm/fields/ssot__AssetLiquidationValueAmount__c.field-meta.xml
<CustomField>
    <fullName>ssot__AssetLiquidationValueAmount__c</fullName>
    <label>Asset Liquidation Value</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AssetLiquidationValueAmount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>