force-app/main/default/objects/ssot__PartyPhilanthropicMilestone__dlm/fields/ssot__BusinessOwnershipValueAmount__c.field-meta.xml
<CustomField>
    <fullName>ssot__BusinessOwnershipValueAmount__c</fullName>
    <label>Business Ownership Value</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>BusinessOwnershipValueAmount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>