force-app/main/default/objects/ssot__PartyPhilanthropicMilestone__dlm/fields/ssot__PartyPhilanthropicAssessmentsCount__c.field-meta.xml
<CustomField>
    <fullName>ssot__PartyPhilanthropicAssessmentsCount__c</fullName>
    <label>Party Philanthropic Assessment Count</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PartyPhilanthropicAssessmentsCount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>