force-app/main/default/objects/ssot__PartyPhilanthropicMilestone__dlm/fields/ssot__PartyPhilanthropicOccurrencesCount__c.field-meta.xml
<CustomField>
    <fullName>ssot__PartyPhilanthropicOccurrencesCount__c</fullName>
    <label>Party Philanthropic Occurrence Count</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PartyPhilanthropicOccurrencesCount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>