force-app/main/default/objects/ssot__PartyPhilanthropicMilestone__dlm/fields/ssot__rel_1731039813468_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1731039813468_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PartyPhilanthropicMilestone_AccountI_rel</label>
    <referenceTo>ssot__Account__dlm</referenceTo>
    <relationshipLabel>PartyPhilanthropicMilestone_AccountI_rel</relationshipLabel>
    <relationshipName>rel_1731039813468_end</relationshipName>
    <type>Lookup</type>
</CustomField>