force-app/main/default/objects/ssot__PartyPhilanthropicMilestone__dlm/fields/ssot__rel_1731040469001_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1731040469001_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PartyPhilanthropicMilestone_ContactI_rel</label>
    <referenceTo>ssot__Individual__dlm</referenceTo>
    <relationshipLabel>PartyPhilanthropicMilestone_ContactI_rel</relationshipLabel>
    <relationshipName>rel_1731040469001_end</relationshipName>
    <type>Lookup</type>
</CustomField>