force-app/main/default/objects/ssot__PartyPhilanthropicMilestone__dlm/fields/ssot__rel_1731041086726_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1731041086726_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PartyPhilanthropicMilestone_Responsi_rel</label>
    <referenceTo>ssot__User__dlm</referenceTo>
    <relationshipLabel>PartyPhilanthropicMilestone_Responsi_rel</relationshipLabel>
    <relationshipName>rel_1731041086726_end</relationshipName>
    <type>Lookup</type>
</CustomField>