force-app/main/default/objects/ssot__PartyPhilanthropicMilestone__dlm/fields/ssot__ResponsiblePersonId__c.field-meta.xml
<CustomField>
    <fullName>ssot__ResponsiblePersonId__c</fullName>
    <label>Responsible Person</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ResponsiblePersonId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>