force-app/main/default/objects/ssot__PartyPhilanthropicMilestone__dlm/fields/ssot__ShortSummaryText__c.field-meta.xml
<CustomField>
    <fullName>ssot__ShortSummaryText__c</fullName>
    <label>Short Summary</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ShortSummaryText</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>