force-app/main/default/objects/ssot__PartyPhilanthropicMilestone__dlm/fields/ssot__StockValueAmount__c.field-meta.xml
<CustomField>
    <fullName>ssot__StockValueAmount__c</fullName>
    <label>Stock Value</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>StockValueAmount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>