force-app/main/default/objects/ssot__PartyPhilanthropicMilestone__dlm/fields/ssot__WeaknessesAndDrawbacksDescription__c.field-meta.xml
<CustomField>
    <fullName>ssot__WeaknessesAndDrawbacksDescription__c</fullName>
    <label>Weaknesses and Drawbacks</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>WeaknessesAndDrawbacksDescription</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>